5.3.0
  - AecuService: added executeWithInstallHookHistory() method (172)
  - Binding: added "not" versions of all filters
  - Fixed issue with long installation time on 6.5 (154)

2022-03-28 5.2.0
  - Added forResourcesByPropertyQuery() to binding
  - added subNodepath parameter to doSetProperty()/doDeleteProperty()/doRenameProperty() (142)
  - Rerun failed scripts in install hook and JMX (169)
  - Possibility to run a prechecks script before the real script (79)
  - Fixed primary type of navigation entries (168)

2021-08-27 5.1.0
  - Added doReorderNode() to binding

2021-07-30 5.0.0
  - AEM Cloud compatibility improvements (separate package for AEM cloud!)
  - Changed packages: no more bundle package, install always "complete" package (includes Groovy Console)
  - New location for install hook scripts: /conf/groovyconsole/scripts/aecu (/var/groovyconsole/scripts/aecu still supported)
  - Members of group "administrators" always have access to AECU history and execution

2021-06-11 4.1.0
  - New filter methods: filterByNodeExists() and filterByNodeNotExists()
  - Fixed Sonar issues (#156)

2020-12-21 4.0.0
  - Update to Groovy Console 16 and require AEM 6.5 (#135)
  - Fix for AEM Cloud in manual execution tool
  - Convert GString values in binding methods (#140)

2020-10-07 3.3.0
  - Allow to change primary type
  - Documentation and example updates
  - Fixed issue with UnsupportedOperationException (#136)

2020-06-30 3.2.0
  - Allow to limit access to AECU via group permissions. Attention: This requires configuration for non-admin users.
  - Autocomplete added, all AECU methods are listed.
  - Added parameter "newName" to doCopyResourceToRelativePath action
  - Added doJoinProperty() methods to binding

2020-04-21 3.1.1
  - JMX: added executeWithHistory()

2020-02-19 3.1.0
  - Allow node creation
  - JDK 11 support
  - Fixes issues when a page with version history is copied

2019-12-11 3.0.1
  - Fixed installation issues on new instances

2019-11-22 3.0.0