@@ -16,62 +16,76 @@
  * DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
  */
-package de.valtech.aecu.core.util.runtime;
+package de.valtech.aecu.core.service;
 
-import static junit.framework.Assert.assertFalse;
-import static junit.framework.Assert.assertTrue;
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.doReturn;
+import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
 
 import javax.jcr.Session;
 
+import org.apache.sling.api.resource.ResourceResolver;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.InjectMocks;
 import org.mockito.Mock;
+import org.mockito.Spy;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.mockito.junit.jupiter.MockitoSettings;
 import org.mockito.quality.Strictness;
 
+import de.valtech.aecu.api.service.AecuService;
+import de.valtech.aecu.core.serviceuser.ServiceResourceResolverService;
+
 @ExtendWith(MockitoExtension.class)
 @MockitoSettings(strictness = Strictness.LENIENT)
-public class RuntimeHelperTest {
+public class AecuCloudStartupServiceTest {
+
+    @Mock
+    private AecuService aecuService;
+
+    @Mock
+    private ServiceResourceResolverService resolverService;
+
+    @Mock
+    private ResourceResolver resolver;
 
     @Mock
     private Session session;
 
-    @Test
-    public void testIsCompositeNodeStore() throws Exception {
-        assertTrue(mockIsCompositeNodeStore(true, true));
+    @InjectMocks
+    @Spy
+    private AecuCloudStartupService startupService;
+
+    @BeforeEach
+    public void setUp() throws Exception {
+        when(resolverService.getServiceResourceResolver()).thenReturn(resolver);
+        when(resolverService.getAdminResourceResolver()).thenReturn(resolver);
+        when(resolver.adaptTo(Session.class)).thenReturn(session);
+        doReturn(true).when(session).hasPermission(anyString(), anyString());
     }
 
     @Test
-    public void testIsNoCompositeNodeStoreByPermission() throws Exception {
-        assertFalse(mockIsCompositeNodeStore(false, true));
+    public void testMigration_compositeNodeStore() throws Exception {
+        doReturn(false).when(session).hasCapability(anyString(), any(), any());
+
+        startupService.activate();
+
+        verify(aecuService, times(1)).executeWithInstallHookHistory(AecuService.AECU_APPS_PATH_PREFIX);
     }
 
     @Test
-    public void testIsNoCompositeNodeStoreByCapability() throws Exception {
-        assertFalse(mockIsCompositeNodeStore(true, false));
-    }
+    public void testMigration_noCompositeNodeStore() throws Exception {
+        doReturn(true).when(session).hasCapability(anyString(), any(), any());
 
-    @Test
-    public void testIsNoCompositeNodeStoreByPermissionAndCapability() throws Exception {
-        assertFalse(mockIsCompositeNodeStore(false, false));
-    }
+        startupService.activate();
 
-    private boolean mockIsCompositeNodeStore(boolean hasPermission, boolean hasNoCapability) throws Exception {
-        doReturn(hasPermission).when(session).hasPermission(anyString(), anyString());
-        doReturn(!hasNoCapability).when(session).hasCapability(anyString(), any(), any());
-        return RuntimeHelper.isCompositeNodeStore(session);
-    }
-
-    @Test
-    public void testWrappedException() throws Exception {
-        IllegalStateException ise = assertThrows(IllegalStateException.class, () -> RuntimeHelper.isCompositeNodeStore(null));
-        assertEquals("Unable to check if session is uses a composite node store", ise.getMessage());
+        verify(aecuService, never()).executeWithInstallHookHistory(AecuService.AECU_APPS_PATH_PREFIX);
     }
 
 }
