@@ -23,9 +23,6 @@
                     <packageType>application</packageType>
                     <filterSource>src/main/content/META-INF/vault/filter.xml</filterSource>
                     <group>Valtech</group>
-                    <properties>
-                        <cloudManagerTarget>none</cloudManagerTarget>
-                    </properties>
                 </configuration>
             </plugin>
             <plugin>
