@@ -1,0 +1,4 @@
+aecu.contentUpgradeBuilder()
+  .forChildResourcesOf("/content/")
+  .printPath()
+  .run()
