@@ -1,4 +1,5 @@
 5.3.0
+  - Added startup hook for automatic script execution on AEM Cloud (171)
   - AecuService: added executeWithInstallHookHistory() method (172)
   - Binding: added "not" versions of all filters
   - Fixed issue with long installation time on 6.5 (154)
